# GenerativeAI

Blog2Podcast/: .gitignore  README.md  blog_2_podcast.py
Blog2Podcast/autogen/: .env_example  README.md  pyproject.toml
Blog2Podcast/autogen/src/: app.py  config.py
Blog2Podcast/autogen/src/agent/: graph.py
Blog2Podcast/autogen/src/clients/: elevenlabs.py  grok.py
Blog2Podcast/crew/: Dockerfile  pyproject.toml
Blog2Podcast/crew/src/: app.py
Blog2Podcast/crew/src/agent/: blog2podcast_crew.py  blog2postcast_flow.py  state.py
Blog2Podcast/crew/src/agent/config/: agents.yaml  tasks.yaml
Blog2Podcast/crew/src/clients/: grok.py
Blog2Podcast/google-adk/src/agent/: prompt.py
Blog2Podcast/langgraph/src/agent/: state.py
Blog2Podcast/langgraph/src/clients/: firecrawl.py
Blog2Podcast/langgraph/src/observability/: opik_utils.py
Blog2Podcast/src/agent/: nodes.py
